edit home, contact, project, and about --> Done

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctypehtml>
 <html lang="en">
 
 <head>
@@ -10,32 +10,29 @@
 <body>
     <div id="container">
         <header>
-            <img id="logo" src="images/logo.png" width="75" height="75" alt="logo of Tan's Portfolia">
+            <img id="logo" src="images/logo.png" width="50" height="50" alt="logo of Tan's Portfolia">
             <h1>Tan's Portfolio
                 <br>
                 2019</h1>
             <nav>
-                <ul>
-                    <li><a href="base.html">Home</a></li>
-                    <li><a href="contact.html">Contact Me</a></li>
-                    <li><a href="projects.html">Projects</a> </li>
+                <ul id="id-neg">
+                    <li id="square"><a href="index.html">Home</a></li>
+                    <li id="square"><a href="Contact-Me.html">Contact Me</a></li>
+                    <li id="square"><a href="About-Me.html">About Me</a></li>
+                    <li id="square"><a href="Projects.html">Projects</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <p>Contact me at:<a>tanlaidec12@gmail.com</a></p>
             <h1>Welcome To My Home Page</h1>
-            <p>Hello I'm Tan</p>
-            <!--<div id="hello-image">
+            <div id="hello">
                 <img src="images/hello.jpg" alt="hello" title="hello" />
                 <img id="hello" src="images/hello-image.jpg" />
-            </div>-->
+            </div>
         </main>
         <footer>
-            <p id="para"> &copy; &lt; MEDA Summer 2019-Tan &gt;</p>
+            <p id="para"> &copy; **MEDA Summer 2019-Tan**</p>
         </footer>
     </div>
     </div>
 </body>
-
-</html>
