--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctypehtml>
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -15,7 +15,7 @@
                 <br>
                 2019</h1>
             <nav>
-                <ul id="id-neg">
+                <ul id="id-nevigate">
                     <li id="square"><a href="index.html">Home</a></li>
                     <li id="square"><a href="Contact-Me.html">Contact Me</a></li>
                     <li id="square"><a href="About-Me.html">About Me</a></li>
@@ -25,14 +25,13 @@
         </header>
         <main>
             <h1>Welcome To My Home Page</h1>
-            <div id="hello">
+            <div>
                 <img src="images/hello.jpg" alt="hello" title="hello" />
-                <img id="hello" src="images/hello-image.jpg" />
+                <img id="hello" src="images/hello-image.jpg" alt="hello" title="hello" />
             </div>
         </main>
         <footer>
             <p id="para"> &copy; **MEDA Summer 2019-Tan**</p>
         </footer>
-    </div>
     </div>
 </body>
