--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -15,7 +15,7 @@
                 <br>
                 2019</h1>
             <nav>
-                <ul id="id-neg">
+                <ul id="id-nevigate">
                     <li id="square"><a href="index.html">Home</a></li>
                     <li id="square"><a href="Contact-Me.html">Contact Me</a></li>
                     <li id="square"><a href="About-Me.html">About Me</a></li>
