--- a/Projects.html
+++ b/Projects.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="column" style="background-color:#ddd;">
                     <h2><a href="">Project 4</a></h2>
-                    <p>I haven't had it yet</p>
+                    <p>I haven't had it</p>
                 </div>
             </div>
         </main>
