--- a/Projects.html
+++ b/Projects.html
@@ -9,17 +9,19 @@
     * {
         box-sizing: border-box;
     }
+
     .column {
         float: left;
         width: 25%;
         padding: 10px;
-        height: 200px;
+        height: 350px;
     }
+
     .row {
-  content: "";
-  display: table;
-  clear: both;
-}
+        content: "";
+        display: table;
+        clear: both;
+    }
     </style>
 </head>
 
@@ -43,24 +45,24 @@
             <p id="main-css">My Projects</p>
             <div class="row">
                 <div class="column" style="background-color:#aaa;">
-                    <h2><a href=" ">My Hobbies</a></h2>
-                    <p>click here to learn more about my hobbies page</p>
+                    <h2><a href="HOBBY-ProjectMEDA.html">My Hobbies</a></h2>
+                    <p>my hobbies page with instructions</p>
                 </div>
                 <div class="column" style="background-color:#bbb;">
-                    <h2><a href="">Project 2</a></h2>
-                    <p>I haven't had it yet</p>
+                    <h2><a href="Project2.html">Manage Enterprise Networks</a></h2>
+                    <p>This is how I did my project</p>
                 </div>
                 <div class="column" style="background-color:#ccc;">
-                    <h2><a href="">Project 3</a></h2>
-                    <p>I haven't had it yet</p>
+                    <h2><a href="Project3.html">IOS Application Development & Manage Enterprise Data</a></h2>
+                    <p>This is how I did my project</p>
                 </div>
                 <div class="column" style="background-color:#ddd;">
-                    <h2><a href="">Project 4</a></h2>
-                    <p>I haven't had it</p>
+                    <h2><a href="Project4.html">IT Project Management & Information Security Management</a></h2>
+                    <p>This is how I did my project</p>
                 </div>
             </div>
         </main>
-        <footer> 
+        <footer>
             <p id="para"> &copy; **MEDA Summer 2019-Tan**</p>
         </footer>
     </div>
