--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </header>
         <main>
             <h1>Welcome To My Home Page</h1>
+            <h2 ><img id="arrow" src="images/arrow.jpg" alt="arrow" />Click options above to explore more about what I did and to know more about me</h2>
             <div>
-                <img src="images/hello.jpg" alt="hello" title="hello" />
-                <img id="hello" src="images/hello-image.jpg" alt="hello" title="hello" />
+                <img id="hello" src="images/hello-image.jpg" alt="hello" />
             </div>
         </main>
         <footer>
