--- a/About-Me.html
+++ b/About-Me.html
@@ -16,10 +16,10 @@
                 2019</h1>
             <nav>
                 <ul id="id-nevigate">
-                    <li id="square"><a href="index.html">Home</a></li>
-                    <li id="square"><a href="Contact-Me.html">Contact Me</a></li>
-                    <li id="square"><a href="About-Me.html">About Me</a></li>
-                    <li id="square"><a href="Projects.html">Projects</a></li>
+                    <li id="square"><a href="index.html"><strong>Home</strong></a></li>
+                    <li id="square"><a href="Contact-Me.html"><strong>Contact Me</strong></a></li>
+                    <li id="square"><a href="About-Me.html"><strong>About Me</strong></a></li>
+                    <li id="square"><a href="Projects.html"><strong>Projects</a></strong></li>
                 </ul>
             </nav>
         </header>
@@ -35,7 +35,7 @@
                 <li>Worked confidently under pressure to gain results-driven</li>
             </ul>
             <ul>
-                <p>My Hard Skills:</p>
+                <h2>My Hard Skills:</h2>
                 <li> <img src="images/business-network.jpg" alt="display" title="display" /> Business Apps and Enterprise Networks</li>
                 <li> <img src="images/Ethical Hacking-natty-bs-world.png" alt="display" title="display" /> Information Security Management</li>
                 <li> <img src="images/pogramming-shareicon.png" alt="display" title="display" /> C#, HTML, CSS, JavaScript, Swift</li>
@@ -47,7 +47,7 @@
                 <li> <img src="images/Cryptography-keltmd.jpg" alt="display" title="display" /> Cryptography</li>
             </ul>
             <ul>
-                <p>My Soft Skills:</p>
+                <h2>My Soft Skills:</h2>
                 <li><img src="images/teamplayer-crownawards.jpg" alt="display" title="display" /> Team player, Multitasking and Customer Service Driven</li>
                 <li><img src="images/pho-designcontest.jpg" alt="display" title="display" /> Fluent in Vietnamese and basic Cantonese</li>
             </ul>
