--- a/HOBBY-ProjectMEDA.html
+++ b/HOBBY-ProjectMEDA.html
@@ -1,163 +1,174 @@
 <!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <title>My Hobby WebPage</title>
-    <meta name="description" content="The HTML5 Herald">
-    <meta name="author" content="SitePoint">
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
-</head>
+<header>
+    <img id="logo" src="images/logo.png" width="50" height="50" alt="logo of Tan's Portfolia">
+    <h1>Tan's Portfolio
+        <br>
+        2019</h1>
+    <nav>
+        <ul id="id-nevigate">
+            <li id="square"><a href="index.html"><strong>Home</strong></a></li>
+            <li id="square"><a href="Contact-Me.html"><strong>Contact Me</strong></a></li>
+            <li id="square"><a href="About-Me.html"><strong>About Me</strong></a></li>
+            <li id="square"><a href="Projects.html"><strong>Projects</a></strong></li>
+        </ul>
+    </nav>
+</header>
 
 <body>
-    <center>
-        <h1 style="background-color:Orange">Introduce To My Hobby WebPage</h1>
-    </center>
-    <p>
-        <style>
-        p {
-            text-indent: 25px;
-        }
-        </style>Hi everyone, my name is Tan, but I preferred people to call me "Ken" because it's easier for them to call, remember and it sounds similar to my real name. I had one hobby that I usually do. I like to do KIRIGAMI, which people knew as paper cutting. It is another part of Japan's Paper Art. Most people knew ORIGAMI (folding paper). 
-    </p>
-    <p>
-        <style>
-        p {
-            text-indent: 25px;
-        }
-        </style>I only do this when I have free time, and I don't always buy a gift to I give out when there are a birthday, or graduation. I made these kinds of stuff and give it to them as a present because it is meaningful between us. I really enjoy doing this because it helped me build some helpful personalities, which I could use for school as well as life.
-        <br>
-        <b><br>such as:</b>
-    </p>
-    <ol>
-        <li>Of Course, Patience (to deal with this cutting)</li>
-        <li>Becoming Painstakingly (to complete this cutting, I can spend hours to put all the pieces together --> I acknowledge this actually called "Action-Oriented")</li>
-        <li>Careful</li>
-        <li>Visualization (I can visualize the finished product by just looking at the template)</li>
-        <li>Determination(It make me want to complete  it after I started it because I was interested at it, it was really cool at first when i saw it)</li>
-        <li>Dexterity (when I have connect them all together, I have to be very gentle)</li>
-    </ol>
-    <p>Besides enjoying doing this, I also like to go to gym whenever I felt bored and stress after studying for hours</p>
-    <center>
-        <h2 style="background-color:DodgerBlue;">KIRIGAMI (also called: 3D-PopUp or Paper Cutting)</h2>
-    </center>
-    <p>The example images of the hobby that I have taken by myself and the images from the Internet related to my hobby.
-    </p>
-    <p>
-        This Kirigami has 4 different types of pattern, there are:
-    </p>
-    <ol>
-        <li style="background-color:green">The 0 Degree:</li>
-        <br>
-        <img src="Project_1/0_do.jpg" alt="0 degree form" title="This is 0_degree template" align=left width=600>
-        <p style="clear:left">Artist: RIU</p>
-        <img src="Project_1/0_doo.jpg" alt="0 degree form" title="THIS IS 0_degree template" align=left width=600>
-        <p style="clear:left">Artist: Pippa Dyrlaga Papercutting Artist</p>
-        <li style="background-color:green">The 90 Degree:</li><br>
-        <img src="Project_1/62511560_384732782250086_3911411817225650176_n.jpg" alt="0 degree form" title="THIS IS 90_degree template" align=left width=600>
-        <p style="clear:left">My Product</p>
-        <li style="background-color:green">The 180 Degree:</li><br>
-        <img src="Project_1/62200365_439451356884759_217033442020294656_n.jpg" alt="0 degree form" title="THIS IS 90_degree template" align=left width=600>
-        <p style="clear:left">My Product</p>
-        <iframe width="700" height="400" src="Project_1/1978933_620314964710483_262197126_n.mp4"></iframe>
-        <bR>
-        <img src="Project_1/180-3.jpg" alt="0 degree form" title="THIS IS 90_degree template" align=left width=600>
-        <p style="clear:left">Kirigami Club</p>
-        <iframe width="700" height="400" src="Project_1/180_videos.mp4"></iframe>
-        <p style="clear:left">Ferris Wheel</p>
-        <li style="background-color:green">The 360 Degree:</li><br>
-        <img src="Project_1/360_degree_buit.jpg" alt="0 degree form" title="THIS IS 360_degree template" align=left width=600>
-        <p style="clear:left">Kirigami Club - London Bridge</P>
-        <p>** to get this 360, you have to cut piece by piece from this template</p>
-        <a target="_blank" href="The Tower Bridge Pattern - KirigamiVN.pdf">PDF pattern for how to cut and parts of this - Author_Yee</a>
-    </ol>
-    </p>
-    <center style="background-color:green">
-        <h2 style="clear:left">It doesn't have any prerequisite, Here are the tools you need to have:</h2>
-    </center>
-    <ol>
-        <li>
-            <p style="clear:left">Cutting Matt (healable)</p>
-            <img src="Project_1/Cutting_matt.jpg" title="Cutting Matt" width=600>
-        </li>
-        <li>
-            <p style="clear:left">Ruler</p>
-            <img src="Project_1/Ruler.jpg" title="ruler" width=600>
-            <p>WITH</p><img src="Project_1/Stainless Steel Ruler.jpg" title="ruler" width=600>
-        </li>
-        <li>
-            <p style="clear:left">Knife with blade's size #11(Recommended)</p>
-            <img src="Project_1/Cutting_Knife.jpg" title="Knife" width=600> <br>
-            <img src="Project_1/X-Acto No.11 Blades for X-Acto Knives.jpg" title="Blade" width=600>
-        </li>
-        <li>
-            <p style="clear:left">Cardstock paper</p>
-            <img src="Project_1/CardStock_Paper.jpg" title="CardStock_Paper" width=600>
-        </li>
-        <li>
-            <p style="clear:left">Printer</p>
-            <img src="Project_1/HP_LaserJet.jpg" title="HP_LaserJet" width=600>
-        </li>
-        <li>Glue</li>
-    </ol>
-    <p>
+    <main>
         <center>
-            <h2 style="background-color:green">Instruction</h2>
-        </center> 
-        You can check out the tutorials from included links below. However, they just show you the simple and easy template. If you want to do more complicated templates you can search it up on Google <b>OR</b> you can contact me, I have downloaded 4-5 GB templates (pictures and templates)
-        <ol>
-            <li>This is how the pattern looks like when you printed it out
-            </li>
-            <img src="Project_1/printed_template.jpg" title="printed_template" width=600>
-            <p style="clear:left">Source: http://ullagami.com/how-to.php
-            </p>
-            <p>Temple</p>
-            <img src="Project_1/Chua.jpg" alt="0 degree form" title="THIS IS Chua">
-            <img src="Project_1/CHUA_Template.jpg" alt="0 degree form" title="THIS IS Chua template" align=left width=725>
-            <li style="clear:left">Here is how you cut the printed paper</li>
-            <img src="Project_1/people_cut.jpg" title="people_cut" width=600>
-            <iframe width="700" height="400" src="Project_1/how_to_cut_paper.mp4"></iframe>
-             <center>
-            <h2 style="background-color:green">Tutorials Videos</h2>
+            <h1 style="background-color:Orange">Introduce To My Hobby WebPage</h1>
         </center>
-            <li style="clear:left"><a href="https://www.youtube.com/watch?v=JYgnQK25FnM">Youtube to learn how to start</a>
-            </li>
-            <li><a href="https://www.facebook.com/kirigamiclub/">Kirigami Club, they shares pattern, you can find the patterns that you like and download to try it out</a>
-            </li>
-            <li><a href="http://ullagami.com/how-to.php">Tutorials on Making Kirigami</a>
-            </li>
-        </ol>
-        <ol>
-            <h4>
-                <b>
-                    <p style="clear:left">This Is My Products:</p>
-                </b>
-            </h4>
-            <li>Loving Swan (360)</li><img src="Project_1/62088844_1121504188056889_914465573167955968_n.jpg" title="Loving Swan" width=600>
-            <li>Boat (360)</li><img src="Project_1/62242663_1205744316271214_8606161584034676736_n.jpg" title="Boat" width=600>
-            <li>Carriage (360)</li><img src="Project_1/1396966_548856178523029_1274886487_o.jpg" title="people_cut" width=600>
-            <li>Final Product I have made for my friend's graduation few years ago</li>
-            <img src="Project_1/10294376_645351435540169_4889665414076029351_n.jpg" title="people_cut" width=600>
-        </ol>
         <p>
-            <a target="_blank" href="https://www.facebook.com/pg/papercuttingvn/photos/?ref=page_internal">Click Here Go To Kirigami Club's Photos</a> <br>
-            Once finish cutting all the pieces, the next step you will have to do is to connect them; however connecting is hard, if you accidentally tear it, you have to cut that part again.
-            <center style="background-color:red">
-                <h4><b>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Enjoy And Have Fun~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</b></h4>
-            </center>
+            <style>
+            p {
+                text-indent: 25px;
+            }
+            </style>Hi everyone, my name is Tan, but I preferred people to call me "Ken" because it's easier for them to call, remember and it sounds similar to my real name. I had one hobby that I usually do. I like to do KIRIGAMI, which people knew as paper cutting. It is another part of Japan's Paper Art. Most people knew ORIGAMI (folding paper).
+        </p>
+        <p>
+            <style>
+            p {
+                text-indent: 25px;
+            }
+            </style>I only do this when I have free time, and I don't always buy a gift to I give out when there are a birthday, or graduation. I made these kinds of stuff and give it to them as a present because it is meaningful between us. I really enjoy doing this because it helped me build some helpful personalities, which I could use for school as well as life.
+            <br>
+            <b><br>such as:</b>
+        </p>
+        <ol>
+            <li>Of Course, Patience (to deal with this cutting)</li>
+            <li>Becoming Painstakingly (to complete this cutting, I can spend hours to put all the pieces together --> I acknowledge this actually called "Action-Oriented")</li>
+            <li>Careful</li>
+            <li>Visualization (I can visualize the finished product by just looking at the template)</li>
+            <li>Determination(It make me want to complete it after I started it because I was interested at it, it was really cool at first when i saw it)</li>
+            <li>Dexterity (when I have connect them all together, I have to be very gentle)</li>
+        </ol>
+        <p>Besides enjoying doing this, I also like to go to gym whenever I felt bored and stress after studying for hours</p>
+        <center>
+            <h2 style="background-color:DodgerBlue;">KIRIGAMI (also called: 3D-PopUp or Paper Cutting)</h2>
+        </center>
+        <p>The example images of the hobby that I have taken by myself and the images from the Internet related to my hobby.
+        </p>
+        <p>
+            This Kirigami has 4 different types of pattern, there are:
+        </p>
+        <ol>
+            <li style="background-color:green">The 0 Degree:</li>
+            <br>
+            <img src="Project_1/0_do.jpg" alt="0 degree form" title="This is 0_degree template" align=left width=600>
+            <p style="clear:left">Artist: RIU</p>
+            <img src="Project_1/0_doo.jpg" alt="0 degree form" title="THIS IS 0_degree template" align=left width=600>
+            <p style="clear:left">Artist: Pippa Dyrlaga Papercutting Artist</p>
+            <li style="background-color:green">The 90 Degree:</li><br>
+            <img src="Project_1/62511560_384732782250086_3911411817225650176_n.jpg" alt="0 degree form" title="THIS IS 90_degree template" align=left width=600>
+            <p style="clear:left">My Product</p>
+            <li style="background-color:green">The 180 Degree:</li><br>
+            <img src="Project_1/62200365_439451356884759_217033442020294656_n.jpg" alt="0 degree form" title="THIS IS 90_degree template" align=left width=600>
+            <p style="clear:left">My Product</p>
+            <iframe width="700" height="400" src="Project_1/1978933_620314964710483_262197126_n.mp4"></iframe>
+            <bR>
+            <img src="Project_1/180-3.jpg" alt="0 degree form" title="THIS IS 90_degree template" align=left width=600>
+            <p style="clear:left">Kirigami Club</p>
+            <iframe width="700" height="400" src="Project_1/180_videos.mp4"></iframe>
+            <p style="clear:left">Ferris Wheel</p>
+            <li style="background-color:green">The 360 Degree:</li><br>
+            <img src="Project_1/360_degree_buit.jpg" alt="0 degree form" title="THIS IS 360_degree template" align=left width=600>
+            <p style="clear:left">Kirigami Club - London Bridge</P>
+            <p>** to get this 360, you have to cut piece by piece from this template</p>
+            <a target="_blank" href="The Tower Bridge Pattern - KirigamiVN.pdf">PDF pattern for how to cut and parts of this - Author_Yee</a>
+        </ol>
         </p>
         <center style="background-color:green">
-            <h2>Appendix - Hyperlinks - References:</h2>
+            <h2 style="clear:left">It doesn't have any prerequisite, Here are the tools you need to have:</h2>
         </center>
-        <ul>
-            <li>Video-source: https://www.scarlettentertainment.com/page/papercutting-artist</li>
-            <li>https://www.facebook.com/pg/papercuttingvn/photos/?ref=page_internal</li>
-            <li>https://www.facebook.com/kirigamiclub/</li>
-            <li>http://kirigamivn.com/portfolio-items/tower-bridge-pattern?fbclid=IwAR3tENpQXeoM_iWNGRJJMWAiWY_sdyMSxdyVgl7l2I6yImLHIUDhBUsRlkw</li>
-            <li>https://phuonguyenidg4.wordpress.com/2016/07/28/kirigami-bach-ngu-phu-quy-do/</li>
-            <li>https://lovekirigami.com/phuong-hoang-va-hoa.html</li>
-            <li>https://origami.lovetoknow.com/Kirigami_Template</li>
-        </ul>
+        <ol>
+            <li>
+                <p style="clear:left">Cutting Matt (healable)</p>
+                <img src="Project_1/Cutting_matt.jpg" title="Cutting Matt" width=600>
+            </li>
+            <li>
+                <p style="clear:left">Ruler</p>
+                <img src="Project_1/Ruler.jpg" title="ruler" width=600>
+                <p>WITH</p><img src="Project_1/Stainless Steel Ruler.jpg" title="ruler" width=600>
+            </li>
+            <li>
+                <p style="clear:left">Knife with blade's size #11(Recommended)</p>
+                <img src="Project_1/Cutting_Knife.jpg" title="Knife" width=600> <br>
+                <img src="Project_1/X-Acto No.11 Blades for X-Acto Knives.jpg" title="Blade" width=600>
+            </li>
+            <li>
+                <p style="clear:left">Cardstock paper</p>
+                <img src="Project_1/CardStock_Paper.jpg" title="CardStock_Paper" width=600>
+            </li>
+            <li>
+                <p style="clear:left">Printer</p>
+                <img src="Project_1/HP_LaserJet.jpg" title="HP_LaserJet" width=600>
+            </li>
+            <li>Glue</li>
+        </ol>
+        <p>
+            <center>
+                <h2 style="background-color:green">Instruction</h2>
+            </center>
+            You can check out the tutorials from included links below. However, they just show you the simple and easy template. If you want to do more complicated templates you can search it up on Google <b>OR</b> you can contact me, I have downloaded 4-5 GB templates (pictures and templates)
+            <ol>
+                <li>This is how the pattern looks like when you printed it out
+                </li>
+                <img src="Project_1/printed_template.jpg" title="printed_template" width=600>
+                <p style="clear:left">Source: http://ullagami.com/how-to.php
+                </p>
+                <p>Temple</p>
+                <img src="Project_1/Chua.jpg" alt="0 degree form" title="THIS IS Chua">
+                <img src="Project_1/CHUA_Template.jpg" alt="0 degree form" title="THIS IS Chua template" align=left width=725>
+                <li style="clear:left">Here is how you cut the printed paper</li>
+                <img src="Project_1/people_cut.jpg" title="people_cut" width=600>
+                <iframe width="700" height="400" src="Project_1/how_to_cut_paper.mp4"></iframe>
+                <center>
+                    <h2 style="background-color:green">Tutorials Videos</h2>
+                </center>
+                <li style="clear:left"><a href="https://www.youtube.com/watch?v=JYgnQK25FnM">Youtube to learn how to start</a>
+                </li>
+                <li><a href="https://www.facebook.com/kirigamiclub/">Kirigami Club, they shares pattern, you can find the patterns that you like and download to try it out</a>
+                </li>
+                <li><a href="http://ullagami.com/how-to.php">Tutorials on Making Kirigami</a>
+                </li>
+            </ol>
+            <ol>
+                <h4>
+                    <b>
+                        <p style="clear:left">This Is My Products:</p>
+                    </b>
+                </h4>
+                <li>Loving Swan (360)</li><img src="Project_1/62088844_1121504188056889_914465573167955968_n.jpg" title="Loving Swan" width=600>
+                <li>Boat (360)</li><img src="Project_1/62242663_1205744316271214_8606161584034676736_n.jpg" title="Boat" width=600>
+                <li>Carriage (360)</li><img src="Project_1/1396966_548856178523029_1274886487_o.jpg" title="people_cut" width=600>
+                <li>Final Product I have made for my friend's graduation few years ago</li>
+                <img src="Project_1/10294376_645351435540169_4889665414076029351_n.jpg" title="people_cut" width=600>
+            </ol>
+            <p>
+                <a target="_blank" href="https://www.facebook.com/pg/papercuttingvn/photos/?ref=page_internal">Click Here Go To Kirigami Club's Photos</a> <br>
+                Once finish cutting all the pieces, the next step you will have to do is to connect them; however connecting is hard, if you accidentally tear it, you have to cut that part again.
+                <center style="background-color:red">
+                    <h4><b>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Enjoy And Have Fun~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</b></h4>
+                </center>
+            </p>
+            <center style="background-color:green">
+                <h2>Appendix - Hyperlinks - References:</h2>
+            </center>
+            <ul>
+                <li>Video-source: https://www.scarlettentertainment.com/page/papercutting-artist</li>
+                <li>https://www.facebook.com/pg/papercuttingvn/photos/?ref=page_internal</li>
+                <li>https://www.facebook.com/kirigamiclub/</li>
+                <li>http://kirigamivn.com/portfolio-items/tower-bridge-pattern?fbclid=IwAR3tENpQXeoM_iWNGRJJMWAiWY_sdyMSxdyVgl7l2I6yImLHIUDhBUsRlkw</li>
+                <li>https://phuonguyenidg4.wordpress.com/2016/07/28/kirigami-bach-ngu-phu-quy-do/</li>
+                <li>https://lovekirigami.com/phuong-hoang-va-hoa.html</li>
+                <li>https://origami.lovetoknow.com/Kirigami_Template</li>
+            </ul>
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
