--- a/Projects.html
+++ b/Projects.html
@@ -13,8 +13,8 @@
     .column {
         float: left;
         width: 25%;
-        padding: 10px;
-        height: 350px;
+        padding: 5px;
+        height: 550px;
     }
 
     .row {
@@ -34,10 +34,10 @@
                 2019</h1>
             <nav>
                 <ul id="id-nevigate">
-                    <li id="square"><a href="index.html">Home</a></li>
-                    <li id="square"><a href="Contact-Me.html">Contact Me</a></li>
-                    <li id="square"><a href="About-Me.html">About Me</a></li>
-                    <li id="square"><a href="Projects.html">Projects</a></li>
+                    <li id="square"><a href="index.html"><strong>Home</strong></a></li>
+                    <li id="square"><a href="Contact-Me.html"><strong>Contact Me</strong></a></li>
+                    <li id="square"><a href="About-Me.html"><strong>About Me</strong></a></li>
+                    <li id="square"><a href="Projects.html"><strong>Projects</a></strong></li>
                 </ul>
             </nav>
         </header>
@@ -47,18 +47,22 @@
                 <div class="column" style="background-color:#aaa;">
                     <h2><a href="HOBBY-ProjectMEDA.html">My Hobbies</a></h2>
                     <p>my hobbies page with instructions</p>
+                    <img id="logo2" src="images/my-hobbies.jpg" alt="logo">
                 </div>
                 <div class="column" style="background-color:#bbb;">
                     <h2><a href="Project2.html">Manage Enterprise Networks</a></h2>
-                    <p>This is how I did my project</p>
+                    <p>check my project out to know more about the way IT manages their data</p>
+                    <img id="logo2" src="images/network.jpg" alt="logo">
                 </div>
                 <div class="column" style="background-color:#ccc;">
-                    <h2><a href="Project3.html">IOS Application Development & Manage Enterprise Data</a></h2>
-                    <p>This is how I did my project</p>
+                    <h2><a href="Project3.html">IOS Application Development<img id="logo2" src="images/app-dev.jpg" alt="logo"> & Manage Enterprise Data</a><img id="logo2" src="images/data.jpg" alt="logo"></h2> 
+                    <p>check my project out to know more about how cool it is</p>
+                    
                 </div>
                 <div class="column" style="background-color:#ddd;">
-                    <h2><a href="Project4.html">IT Project Management & Information Security Management</a></h2>
-                    <p>This is how I did my project</p>
+                    <h2><a href="Project4.html">IT Project Management <img id="logo2" src="images/project.jpg" alt="logo">& Information Security Management</a><img id="logo2" src="images/securityit.jpg" alt="logo"></h2>
+                    <p>check my project out to see how the vulnerable the world is</p>
+                    
                 </div>
             </div>
         </main>
