--- a/project3.html
+++ b/project3.html
@@ -16,10 +16,10 @@
                 2019</h1>
             <nav>
                 <ul id="id-nevigate">
-                    <li id="square"><a href="index.html">Home</a></li>
-                    <li id="square"><a href="Contact-Me.html">Contact Me</a></li>
-                    <li id="square"><a href="About-Me.html">About Me</a></li>
-                    <li id="square"><a href="Projects.html">Projects</a></li>
+                    <li id="square"><a href="index.html"><strong>Home</strong></a></li>
+                    <li id="square"><a href="Contact-Me.html"><strong>Contact Me</strong></a></li>
+                    <li id="square"><a href="About-Me.html"><strong>About Me</strong></a></li>
+                    <li id="square"><a href="Projects.html"><strong>Projects</a></strong></li>
                 </ul>
             </nav>
         </header>
